# backend/workbook/static/swagger.json
@@ -42,7 +42,26 @@
             "in": "body",
             "required": true,
             "schema": {
-              "$ref": "#/definitions/User"
+              "type": "object",
+              "properties": {
+                "email": {
+                  "type": "string",
+                  "description": "The email address of the new user"
+                },
+                "username": {
+                  "type": "string",
+                  "description": "The username of the new user"
+                },
+                "password": {
+                  "type": "string",
+                  "description": "The password of the new user"
+                },
+                "name": {
+                  "type": "string",
+                  "description": "The name of the new user"
+                }
+              },
+              "required": ["email", "username", "password", "name"]
             }
           }
         ],
